--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -78,6 +78,7 @@
   <string name="ClearProfileActivity_remove_profile_photo">Supprimer la photo de profil ?</string>
   <!--CommunicationActions-->
   <string name="CommunicationActions_no_browser_found">Aucun navigateur Web n’a été trouvé.</string>
+  <string name="CommunicationActions_a_cellular_call_is_already_in_progress">Un appel cellulaire est déjà en cours.</string>
   <!--ConfirmIdentityDialog-->
   <string name="ConfirmIdentityDialog_your_safety_number_with_s_has_changed">Votre numéro de sécurité avec %1$s a changé. Cela pourrait signifier soit que quelqu’un tente d’intercepter votre communication, soit que %2$s a simplement réinstallé Signal.</string>
   <string name="ConfirmIdentityDialog_you_may_wish_to_verify_your_safety_number_with_this_contact">Vous voudrez peut-être vérifier votre numéro de sécurité avec ce contact.</string>
@@ -137,7 +138,6 @@
   <string name="ConversationActivity_transport_insecure_mms">Message multimédia non sécurisé</string>
   <string name="ConversationActivity_transport_signal">Signal</string>
   <string name="ConversationActivity_lets_switch_to_signal">Passons à Signal %1$s</string>
-  <string name="ConversationActivity_lets_use_this_to_chat">Utilisons cela pour dialoguer : %1$s</string>
   <string name="ConversationActivity_error_leaving_group">Erreur en quittant le groupe</string>
   <string name="ConversationActivity_specify_recipient">Veuillez choisir un contact</string>
   <string name="ConversationActivity_unblock_this_contact_question">Débloquer ce contact ?</string>
@@ -162,6 +162,8 @@
   <string name="ConversationActivity_no">Non</string>
   <string name="ConversationActivity_search_position">%1$d de %2$d</string>
   <string name="ConversationActivity_no_results">Il n’y a aucun résultat</string>
+  <string name="ConversationActivity_sticker_pack_installed">Le paquet d’autocollants a été installé</string>
+  <string name="ConversationActivity_new_say_it_with_stickers">Nouveau ! Dites-le avec des autocollants</string>
   <!--ConversationAdapter-->
   <plurals name="ConversationAdapter_n_unread_messages">
     <item quantity="one">%d message non lu</item>
@@ -555,6 +557,7 @@ votre numéro de téléphone</string>
   <string name="SharedContactView_message">Message Signal</string>
   <!--Slide-->
   <string name="Slide_image">Image</string>
+  <string name="Slide_sticker">Autocollant</string>
   <string name="Slide_audio">Son</string>
   <string name="Slide_video">Vidéo</string>
   <!--SmsMessageRecord-->
@@ -565,6 +568,26 @@ Vous avez reçu un message d’échange de clés pour une version de protocole i
   <string name="SmsMessageRecord_secure_session_reset">Vous avez réinitialisé la session sécurisée.</string>
   <string name="SmsMessageRecord_secure_session_reset_s">%s a réinitialisé la session sécurisée.</string>
   <string name="SmsMessageRecord_duplicate_message">Message en double.</string>
+  <string name="SmsMessageRecord_this_message_could_not_be_processed_because_it_was_sent_from_a_newer_version">
+        Ce message n’a pas pu être traité, car il a été envoyé à partir d’une version plus récente de Signal. Vous pourrez demander à votre contact de renvoyer ce message une fois que vous aurez mis Signal à jour.
+</string>
+  <!--StickerManagementActivity-->
+  <string name="StickerManagementActivity_stickers">Autocollants</string>
+  <!--StickerManagementAdapter-->
+  <string name="StickerManagementAdapter_installed_stickers">Autocollants installés</string>
+  <string name="StickerManagementAdapter_stickers_you_received">Autocollants que vous avez reçus</string>
+  <string name="StickerManagementAdapter_signal_artist_series">Série d’artiste Signal</string>
+  <string name="StickerManagementAdapter_no_stickers_installed">Aucun autocollant n’est installé</string>
+  <string name="StickerManagementAdapter_stickers_from_incoming_messages_will_appear_here">Les autocollants des messages entrants apparaîtront ici</string>
+  <string name="StickerManagementAdapter_untitled">Sans titre</string>
+  <string name="StickerManagementAdapter_unknown">Inconnu</string>
+  <!--StickerPackPreviewActivity-->
+  <string name="StickerPackPreviewActivity_untitled">Sans titre</string>
+  <string name="StickerPackPreviewActivity_unknown">Inconnu</string>
+  <string name="StickerPackPreviewActivity_install">Installer</string>
+  <string name="StickerPackPreviewActivity_remove">Supprimer</string>
+  <string name="StickerPackPreviewActivity_stickers">Autocollants</string>
+  <string name="StickerPackPreviewActivity_failed_to_load_sticker_pack">Échec de chargement de paquet d’autocollants</string>
   <!--ThreadRecord-->
   <string name="ThreadRecord_group_updated">Le groupe a été mis à jour</string>
   <string name="ThreadRecord_left_the_group">A quitté le groupe</string>
@@ -581,6 +604,7 @@ Vous avez reçu un message d’échange de clés pour une version de protocole i
   <string name="ThreadRecord_your_safety_number_with_s_has_changed">Votre numéro de sécurité avec %s a changé</string>
   <string name="ThreadRecord_you_marked_verified">Vous avez marqué comme vérifié</string>
   <string name="ThreadRecord_you_marked_unverified">Vous avez marqué comme non vérifié</string>
+  <string name="ThreadRecord_message_could_not_be_processed">Le message n’a pas pu être traité.</string>
   <!--UpdateApkReadyListener-->
   <string name="UpdateApkReadyListener_Signal_update">Mise à jour de Signal</string>
   <string name="UpdateApkReadyListener_a_new_version_of_signal_is_available_tap_to_update">Une nouvelle version de Signal est proposée. Touchez pour lancer la mise à jour</string>
@@ -646,6 +670,7 @@ Vous avez reçu un message d’échange de clés pour une version de protocole i
   <string name="MessageNotifier_mark_all_as_read">Tout marquer comme lu</string>
   <string name="MessageNotifier_mark_read">Marquer comme lu</string>
   <string name="MessageNotifier_media_message">Message multimédia</string>
+  <string name="MessageNotifier_sticker">Autocollant</string>
   <string name="MessageNotifier_reply">Répondre</string>
   <string name="MessageNotifier_signal_message">Message Signal</string>
   <string name="MessageNotifier_unsecured_sms">Texto non sécurisé</string>
@@ -768,6 +793,7 @@ Vous avez reçu un message d’échange de clés pour une version de protocole i
   <string name="QuoteView_audio">Contenu audio</string>
   <string name="QuoteView_video">Vidéo</string>
   <string name="QuoteView_photo">Photo</string>
+  <string name="QuoteView_sticker">Autocollant</string>
   <string name="QuoteView_document">Document</string>
   <string name="QuoteView_you">Vous</string>
   <string name="QuoteView_original_missing">Le message original est introuvable</string>
