--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -78,6 +78,7 @@
   <string name="ClearProfileActivity_remove_profile_photo">Remover a foto do perfil?</string>
   <!--CommunicationActions-->
   <string name="CommunicationActions_no_browser_found">Não foi encontrado nenhum navegador de Internet.</string>
+  <string name="CommunicationActions_a_cellular_call_is_already_in_progress">Já está a decorrer uma chamada através das redes móveis.</string>
   <!--ConfirmIdentityDialog-->
   <string name="ConfirmIdentityDialog_your_safety_number_with_s_has_changed">O seu número de segurança com %1$s foi alterado. Isto poderá significar que alguém está a tentar intercetar esta comunicação ou simplesmente que %2$s reinstalou o Signal.</string>
   <string name="ConfirmIdentityDialog_you_may_wish_to_verify_your_safety_number_with_this_contact">Você poderá desejar verificar o seu número de segurança com este contacto.</string>
@@ -137,7 +138,6 @@
   <string name="ConversationActivity_transport_insecure_mms">MMS insegura</string>
   <string name="ConversationActivity_transport_signal">Signal</string>
   <string name="ConversationActivity_lets_switch_to_signal">Vamos mudar para o Signal %1$s</string>
-  <string name="ConversationActivity_lets_use_this_to_chat">Vamos utilizar isto para conversar: %1$s</string>
   <string name="ConversationActivity_error_leaving_group">Erro ao abandonar o grupo</string>
   <string name="ConversationActivity_specify_recipient">Por favor escolha um contacto</string>
   <string name="ConversationActivity_unblock_this_contact_question">Desbloquear este contacto?</string>
@@ -162,6 +162,8 @@
   <string name="ConversationActivity_no">Não</string>
   <string name="ConversationActivity_search_position">%1$d de %2$d</string>
   <string name="ConversationActivity_no_results">Sem resultados</string>
+  <string name="ConversationActivity_sticker_pack_installed">Pacote de autocolantes instalado</string>
+  <string name="ConversationActivity_new_say_it_with_stickers">Novidade! Comunica com autocolantes</string>
   <!--ConversationAdapter-->
   <plurals name="ConversationAdapter_n_unread_messages">
     <item quantity="one">%d mensagem não lida</item>
@@ -553,6 +555,7 @@ especificou (%s) é inválido.</string>
   <string name="SharedContactView_message">Mensagem do Signal</string>
   <!--Slide-->
   <string name="Slide_image">Imagem</string>
+  <string name="Slide_sticker">Autocolante</string>
   <string name="Slide_audio">Áudio</string>
   <string name="Slide_video">Vídeo</string>
   <!--SmsMessageRecord-->
@@ -566,6 +569,26 @@ Mensagem de troca de chaves inválida para esta versão do protocolo.
   <string name="SmsMessageRecord_secure_session_reset">Reiniciou a sessão segura.</string>
   <string name="SmsMessageRecord_secure_session_reset_s">%s reiniciou a sessão segura.</string>
   <string name="SmsMessageRecord_duplicate_message">Mensagem duplicada.</string>
+  <string name="SmsMessageRecord_this_message_could_not_be_processed_because_it_was_sent_from_a_newer_version">
+        Esta mensagem não pode ser processada porque foi enviada a partir de uma versão mais recente do Signal. Peça ao seu contacto para lhe reenviar novamente esta mensagem após você proceder à atualização do Signal.
+    </string>
+  <!--StickerManagementActivity-->
+  <string name="StickerManagementActivity_stickers">Autocolantes</string>
+  <!--StickerManagementAdapter-->
+  <string name="StickerManagementAdapter_installed_stickers">Autocolantes instalados</string>
+  <string name="StickerManagementAdapter_stickers_you_received">Autocolantes que recebeu</string>
+  <string name="StickerManagementAdapter_signal_artist_series">Séries de artista do Signal</string>
+  <string name="StickerManagementAdapter_no_stickers_installed">Sem autocolantes instalados</string>
+  <string name="StickerManagementAdapter_stickers_from_incoming_messages_will_appear_here">Os autocolantes das mensagens recebidas irão aparecer aqui</string>
+  <string name="StickerManagementAdapter_untitled">Sem título</string>
+  <string name="StickerManagementAdapter_unknown">Desconhecido</string>
+  <!--StickerPackPreviewActivity-->
+  <string name="StickerPackPreviewActivity_untitled">Sem título</string>
+  <string name="StickerPackPreviewActivity_unknown">Desconhecido</string>
+  <string name="StickerPackPreviewActivity_install">Instalar</string>
+  <string name="StickerPackPreviewActivity_remove">Remover</string>
+  <string name="StickerPackPreviewActivity_stickers">Autocolantes</string>
+  <string name="StickerPackPreviewActivity_failed_to_load_sticker_pack">Falha ao carregar o pacote de autocolantes</string>
   <!--ThreadRecord-->
   <string name="ThreadRecord_group_updated">Grupo atualizado</string>
   <string name="ThreadRecord_left_the_group">Abandonou o grupo</string>
@@ -582,6 +605,7 @@ Mensagem de troca de chaves inválida para esta versão do protocolo.
   <string name="ThreadRecord_your_safety_number_with_s_has_changed">O seu número de segurança com %s mudou.</string>
   <string name="ThreadRecord_you_marked_verified">Marcou como verificado</string>
   <string name="ThreadRecord_you_marked_unverified">Marcou como não verificado</string>
+  <string name="ThreadRecord_message_could_not_be_processed">A mensagem não pode ser processada</string>
   <!--UpdateApkReadyListener-->
   <string name="UpdateApkReadyListener_Signal_update">Atualização do Signal</string>
   <string name="UpdateApkReadyListener_a_new_version_of_signal_is_available_tap_to_update">Está disponível uma nova versão do Signal, toque para atualizar</string>
@@ -647,6 +671,7 @@ Mensagem de troca de chaves inválida para esta versão do protocolo.
   <string name="MessageNotifier_mark_all_as_read">Marcar todas como lidas</string>
   <string name="MessageNotifier_mark_read">Marcar como lida</string>
   <string name="MessageNotifier_media_message">Mensagem multimédia</string>
+  <string name="MessageNotifier_sticker">Autocolante</string>
   <string name="MessageNotifier_reply">Responder</string>
   <string name="MessageNotifier_signal_message">Mensagem do Signal</string>
   <string name="MessageNotifier_unsecured_sms">SMS inseguro</string>
@@ -769,6 +794,7 @@ Mensagem de troca de chaves inválida para esta versão do protocolo.
   <string name="QuoteView_audio">Áudio</string>
   <string name="QuoteView_video">Vídeo</string>
   <string name="QuoteView_photo">Foto</string>
+  <string name="QuoteView_sticker">Autocolante</string>
   <string name="QuoteView_document">Documento</string>
   <string name="QuoteView_you">Você</string>
   <string name="QuoteView_original_missing">Não foi encontrada a mensagem original</string>
