--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -81,6 +81,7 @@
   <string name="ClearProfileActivity_remove_profile_photo">Elimin poza de profil?</string>
   <!--CommunicationActions-->
   <string name="CommunicationActions_no_browser_found">Nu s-a găsit nici un web browser.</string>
+  <string name="CommunicationActions_a_cellular_call_is_already_in_progress">Un apel celular este deja în desfășurare.</string>
   <!--ConfirmIdentityDialog-->
   <string name="ConfirmIdentityDialog_your_safety_number_with_s_has_changed">Numărul de siguranță pentru %1$s s-a schimbat.  Asta poate însemna că cineva încearcă să intercepteze comunicația sau că %2$s a reinstalat Signal.</string>
   <string name="ConfirmIdentityDialog_you_may_wish_to_verify_your_safety_number_with_this_contact">Probabil că dorești să verifici numărul de siguranță pentru acest contact.</string>
@@ -140,7 +141,6 @@
   <string name="ConversationActivity_transport_insecure_mms">MMS nesecurizat</string>
   <string name="ConversationActivity_transport_signal">Signal</string>
   <string name="ConversationActivity_lets_switch_to_signal">Hai să folosim Signal %1$s</string>
-  <string name="ConversationActivity_lets_use_this_to_chat">Hai să utilizăm aplicația asta ca să vorbim: %1$s</string>
   <string name="ConversationActivity_error_leaving_group">Eroare la parăsirea grupului</string>
   <string name="ConversationActivity_specify_recipient">Vă rog alegeți un contact</string>
   <string name="ConversationActivity_unblock_this_contact_question">Deblochez acest contact?</string>
@@ -165,6 +165,8 @@
   <string name="ConversationActivity_no">Nu</string>
   <string name="ConversationActivity_search_position">%1$d din %2$d</string>
   <string name="ConversationActivity_no_results">Niciun rezultat</string>
+  <string name="ConversationActivity_sticker_pack_installed">Pachetul cu autocolante este instalat</string>
+  <string name="ConversationActivity_new_say_it_with_stickers">Nou! Spune-o cu autocolante</string>
   <!--ConversationAdapter-->
   <plurals name="ConversationAdapter_n_unread_messages">
     <item quantity="one">%d mesaj necitit</item>
@@ -574,6 +576,7 @@ furnizat (%s) este invalid.</string>
   <string name="SharedContactView_message">Mesaj Signal</string>
   <!--Slide-->
   <string name="Slide_image">Imagine</string>
+  <string name="Slide_sticker">Autocolant</string>
   <string name="Slide_audio">Audio</string>
   <string name="Slide_video">Video</string>
   <!--SmsMessageRecord-->
@@ -585,6 +588,26 @@ Am primit mesajul conform căruia schimbul de chei a avut loc pentru o versiune 
   <string name="SmsMessageRecord_secure_session_reset">Ai resetat sesiunea securizată.</string>
   <string name="SmsMessageRecord_secure_session_reset_s">%s a resetat sesiunea securizată.</string>
   <string name="SmsMessageRecord_duplicate_message">Mesaj duplicat.</string>
+  <string name="SmsMessageRecord_this_message_could_not_be_processed_because_it_was_sent_from_a_newer_version">
+        Acest mesaj nu a putut fi procesat deoarece a fost trimis de pe o versiune mai nouă versiune de Signal. Puteți solicita contactului dvs. să trimită din nou acest mesaj după ce actualizați.
+    </string>
+  <!--StickerManagementActivity-->
+  <string name="StickerManagementActivity_stickers">Autocolante</string>
+  <!--StickerManagementAdapter-->
+  <string name="StickerManagementAdapter_installed_stickers">Autocolante instalate</string>
+  <string name="StickerManagementAdapter_stickers_you_received">Autocolante primite</string>
+  <string name="StickerManagementAdapter_signal_artist_series">Seria artistică Signal</string>
+  <string name="StickerManagementAdapter_no_stickers_installed">Nici un autocolant instalat</string>
+  <string name="StickerManagementAdapter_stickers_from_incoming_messages_will_appear_here">Autocolantele din mesajele primite se vor afișa aici</string>
+  <string name="StickerManagementAdapter_untitled">Fără titlu</string>
+  <string name="StickerManagementAdapter_unknown">Necunoscut</string>
+  <!--StickerPackPreviewActivity-->
+  <string name="StickerPackPreviewActivity_untitled">Fără titlu</string>
+  <string name="StickerPackPreviewActivity_unknown">Necunoscut</string>
+  <string name="StickerPackPreviewActivity_install">Instalați</string>
+  <string name="StickerPackPreviewActivity_remove">Eliminați</string>
+  <string name="StickerPackPreviewActivity_stickers">Autocolante</string>
+  <string name="StickerPackPreviewActivity_failed_to_load_sticker_pack">Nu s-a putut încărca pachetul cu autocolante</string>
   <!--ThreadRecord-->
   <string name="ThreadRecord_group_updated">Grupul a fost actualizat</string>
   <string name="ThreadRecord_left_the_group">A părăsit grupul</string>
@@ -601,6 +624,7 @@ Am primit mesajul conform căruia schimbul de chei a avut loc pentru o versiune 
   <string name="ThreadRecord_your_safety_number_with_s_has_changed">Numărul tău de siguranță pentru %s s-a schimbat.</string>
   <string name="ThreadRecord_you_marked_verified">Ați marcat ca și verificat</string>
   <string name="ThreadRecord_you_marked_unverified">Ați marcat ca și neverificat</string>
+  <string name="ThreadRecord_message_could_not_be_processed">Mesajul nu a putut fi procesat</string>
   <!--UpdateApkReadyListener-->
   <string name="UpdateApkReadyListener_Signal_update">Actualizare Signal</string>
   <string name="UpdateApkReadyListener_a_new_version_of_signal_is_available_tap_to_update">O nouă versiune de Signal este disponibilă, apasă pentru actualizare</string>
@@ -666,6 +690,7 @@ Am primit mesajul conform căruia schimbul de chei a avut loc pentru o versiune 
   <string name="MessageNotifier_mark_all_as_read">Marchează tot ca citit</string>
   <string name="MessageNotifier_mark_read">Marchează ca citit</string>
   <string name="MessageNotifier_media_message">Mesaj media</string>
+  <string name="MessageNotifier_sticker">Autocolant</string>
   <string name="MessageNotifier_reply">Răspunde</string>
   <string name="MessageNotifier_signal_message">Mesaj Signal</string>
   <string name="MessageNotifier_unsecured_sms">SMS nesecurizat</string>
@@ -789,6 +814,7 @@ Am primit mesajul conform căruia schimbul de chei a avut loc pentru o versiune 
   <string name="QuoteView_audio">Audio</string>
   <string name="QuoteView_video">Video</string>
   <string name="QuoteView_photo">Poză</string>
+  <string name="QuoteView_sticker">Autocolant</string>
   <string name="QuoteView_document">Document</string>
   <string name="QuoteView_you">Tu</string>
   <string name="QuoteView_original_missing">Mesajul original nu a fost găsit</string>
