--- a/res/values-sl/strings.xml
+++ b/res/values-sl/strings.xml
@@ -84,6 +84,7 @@
   <string name="ClearProfileActivity_remove_profile_photo">Želite odstraniti predstavitveno fotografijo?</string>
   <!--CommunicationActions-->
   <string name="CommunicationActions_no_browser_found">Spletnega brskalnika ni bilo mogoče najti.</string>
+  <string name="CommunicationActions_a_cellular_call_is_already_in_progress">Telefonski klic je že v teku.</string>
   <!--ConfirmIdentityDialog-->
   <string name="ConfirmIdentityDialog_your_safety_number_with_s_has_changed">Varnostno število z uporabnikom %1$s je bilo spremenjeno. To lahko pomeni, da poskuša nekdo prestrezati vajino komunikacijo ali pa je %2$s zgolj ponovno namestil aplikacijo Signal.</string>
   <string name="ConfirmIdentityDialog_you_may_wish_to_verify_your_safety_number_with_this_contact">Morda bi želeli preveriti vajino skupno varnostno število.</string>
@@ -127,7 +128,7 @@
   <string name="ConversationActivity_this_may_help_if_youre_having_encryption_problems">To lahko pomaga pri težavah s šifriranjem med pogovorom. Vaša sporočila bodo ohranjena.</string>
   <string name="ConversationActivity_reset">Ponastavi</string>
   <string name="ConversationActivity_add_attachment">Dodaj priponko</string>
-  <string name="ConversationActivity_select_contact_info">Izberi podatke o stiku</string>
+  <string name="ConversationActivity_select_contact_info">Izberi podatke o uporabniku</string>
   <string name="ConversationActivity_compose_message">Sestavi sporočilo</string>
   <string name="ConversationActivity_sorry_there_was_an_error_setting_your_attachment">Oprostite, pri nastavljanju priponke je prišlo do napake.</string>
   <string name="ConversationActivity_recipient_is_not_a_valid_sms_or_email_address_exclamation">Naslov prejemnika ni veljaven SMS oz. email naslov!</string>
@@ -143,9 +144,8 @@
   <string name="ConversationActivity_transport_insecure_mms">Nezavarovan MMS</string>
   <string name="ConversationActivity_transport_signal">Signal</string>
   <string name="ConversationActivity_lets_switch_to_signal">Začni uporabljati aplikacijo Signal %1$s</string>
-  <string name="ConversationActivity_lets_use_this_to_chat">Uporabljajva tole za pogovore: %1$s</string>
   <string name="ConversationActivity_error_leaving_group">Napaka ob zapuščanju skupine</string>
-  <string name="ConversationActivity_specify_recipient">Prosimo, izberite stik</string>
+  <string name="ConversationActivity_specify_recipient">Prosimo, izberite uporabnika</string>
   <string name="ConversationActivity_unblock_this_contact_question">Odblokiram tega uporabnika?</string>
   <string name="ConversationActivity_unblock_this_group_question">Odblokiram skupino?</string>
   <string name="ConversationActivity_you_will_once_again_be_able_to_receive_messages_and_calls_from_this_contact">Zopet boste lahko prejemali sporočila in klice tega uporabnika.</string>
@@ -168,6 +168,8 @@
   <string name="ConversationActivity_no">Ne</string>
   <string name="ConversationActivity_search_position">%1$d od %2$d</string>
   <string name="ConversationActivity_no_results">Brez rezultata.</string>
+  <string name="ConversationActivity_sticker_pack_installed">Nameščen je bil paket nalepk</string>
+  <string name="ConversationActivity_new_say_it_with_stickers">Novo! Povejte z nalepkami!</string>
   <!--ConversationAdapter-->
   <plurals name="ConversationAdapter_n_unread_messages">
     <item quantity="one">%d neprebrano sporočilo</item>
@@ -339,7 +341,7 @@
   <string name="GroupCreateActivity_actionbar_edit_title">Uredi skupino</string>
   <string name="GroupCreateActivity_group_name_hint">Ime skupine</string>
   <string name="GroupCreateActivity_actionbar_mms_title">Nova skupina MMS</string>
-  <string name="GroupCreateActivity_contacts_dont_support_push">Izbrali ste stik, ki ne podpira skupin Signal, zato bo to skupina MMS.</string>
+  <string name="GroupCreateActivity_contacts_dont_support_push">Izbrali ste uporabnika, ki ne uporablja aplikacije Signal, zato bo to skupina MMS.</string>
   <string name="GroupCreateActivity_youre_not_registered_for_signal">Ker niste prijavljeni za uporabo podatkovne komunikacije, so skupine Signal onemogočene. Poskusite se registrirati v meniju: Nastavitve &gt; Napredno.</string>
   <string name="GroupCreateActivity_contacts_no_members">V skupini mora biti vsaj ena oseba!</string>
   <string name="GroupCreateActivity_contacts_invalid_number">Nekdo od članov skupine ima nepravilno zapisano številko. Popravite napako ali odstranite stik iz skupine in poskusite znova.</string>
@@ -363,7 +365,7 @@
   <string name="InputPanel_tap_and_hold_to_record_a_voice_message_release_to_send">Za snemanje glasovnega sporočila se dotaknite in držite, za pošiljanje spustite</string>
   <!--InviteActivity-->
   <string name="InviteActivity_share">Deli</string>
-  <string name="InviteActivity_choose_contacts">Izberi stike</string>
+  <string name="InviteActivity_choose_contacts">Izberi uporabnike</string>
   <string name="InviteActivity_cancel">Prekliči</string>
   <string name="InviteActivity_sending">Pošiljam ...</string>
   <string name="InviteActivity_heart_content_description">Srce</string>
@@ -590,6 +592,7 @@
   <string name="SharedContactView_message">Sporočilo Signal</string>
   <!--Slide-->
   <string name="Slide_image">Slika</string>
+  <string name="Slide_sticker">Nalepka</string>
   <string name="Slide_audio">Zvok</string>
   <string name="Slide_video">Video</string>
   <!--SmsMessageRecord-->
@@ -601,6 +604,24 @@ Prejeto sporočilo za izmenjavo ključev za napačno različico protokola.</stri
   <string name="SmsMessageRecord_secure_session_reset">Ponastavili ste varno sejo.</string>
   <string name="SmsMessageRecord_secure_session_reset_s">Oseba %s je ponastavila varno sejo.</string>
   <string name="SmsMessageRecord_duplicate_message">Podvojeno sporočilo.</string>
+  <string name="SmsMessageRecord_this_message_could_not_be_processed_because_it_was_sent_from_a_newer_version">Sporočilo ni moglo biti obdelano, ker je bilo poslano iz novejše različice aplikacije Signal. Po posodobitvi aplikacije lahko prosite uporabnika naj vam ga ponovno pošlje.</string>
+  <!--StickerManagementActivity-->
+  <string name="StickerManagementActivity_stickers">Nalepke</string>
+  <!--StickerManagementAdapter-->
+  <string name="StickerManagementAdapter_installed_stickers">Nameščene nalepke</string>
+  <string name="StickerManagementAdapter_stickers_you_received">Prejete nalepke</string>
+  <string name="StickerManagementAdapter_signal_artist_series">Serija Signalovi umetniki</string>
+  <string name="StickerManagementAdapter_no_stickers_installed">Brez nameščenih nalepk</string>
+  <string name="StickerManagementAdapter_stickers_from_incoming_messages_will_appear_here">Tu bodo prikazane nalepke iz dohodnih sporočil.</string>
+  <string name="StickerManagementAdapter_untitled">Brez naslova</string>
+  <string name="StickerManagementAdapter_unknown">Neznano</string>
+  <!--StickerPackPreviewActivity-->
+  <string name="StickerPackPreviewActivity_untitled">Brez imena</string>
+  <string name="StickerPackPreviewActivity_unknown">Neznano</string>
+  <string name="StickerPackPreviewActivity_install">Namesti</string>
+  <string name="StickerPackPreviewActivity_remove">Odstrani</string>
+  <string name="StickerPackPreviewActivity_stickers">Nalepke</string>
+  <string name="StickerPackPreviewActivity_failed_to_load_sticker_pack">Nalaganje paketa nalepk ni uspelo</string>
   <!--ThreadRecord-->
   <string name="ThreadRecord_group_updated">Skupina je posodobljena</string>
   <string name="ThreadRecord_left_the_group">Zapustili ste skupino.</string>
@@ -617,6 +638,7 @@ Prejeto sporočilo za izmenjavo ključev za napačno različico protokola.</stri
   <string name="ThreadRecord_your_safety_number_with_s_has_changed">Varnostno število z uporabnikom %s je bilo spremenjeno.</string>
   <string name="ThreadRecord_you_marked_verified">Označili ste kot potrjeno</string>
   <string name="ThreadRecord_you_marked_unverified">Označili ste kot nepotrjeno</string>
+  <string name="ThreadRecord_message_could_not_be_processed">Sporočilo ni moglo biti obdelano</string>
   <!--UpdateApkReadyListener-->
   <string name="UpdateApkReadyListener_Signal_update">Nadgradnja aplikacije Signal</string>
   <string name="UpdateApkReadyListener_a_new_version_of_signal_is_available_tap_to_update">Na voljo je nova različica aplikacije Signal. Tapnite za nadgradnjo.</string>
@@ -682,6 +704,7 @@ Prejeto sporočilo za izmenjavo ključev za napačno različico protokola.</stri
   <string name="MessageNotifier_mark_all_as_read">Označi vse kot prebrano</string>
   <string name="MessageNotifier_mark_read">Označi kot prebrano</string>
   <string name="MessageNotifier_media_message">Večpredstavno sporočilo</string>
+  <string name="MessageNotifier_sticker">Nalepka</string>
   <string name="MessageNotifier_reply">Odgovor</string>
   <string name="MessageNotifier_signal_message">Sporočilo Signal</string>
   <string name="MessageNotifier_unsecured_sms">Nezavarovan SMS</string>
@@ -806,6 +829,7 @@ Prejeto sporočilo za izmenjavo ključev za napačno različico protokola.</stri
   <string name="QuoteView_audio">Zvok</string>
   <string name="QuoteView_video">Video</string>
   <string name="QuoteView_photo">Fotografija</string>
+  <string name="QuoteView_sticker">Nalepka</string>
   <string name="QuoteView_document">Dokument</string>
   <string name="QuoteView_you">Vi</string>
   <string name="QuoteView_original_missing">Izvorno sporočilo ni bilo najdeno</string>
