--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -78,6 +78,7 @@
   <string name="ClearProfileActivity_remove_profile_photo">Profil fotoğrafı kaldırılsın mı?</string>
   <!--CommunicationActions-->
   <string name="CommunicationActions_no_browser_found">Hiçbir web tarayıcısı bulunamadı.</string>
+  <string name="CommunicationActions_a_cellular_call_is_already_in_progress">Zaten bir hücresel arama sürmekte.</string>
   <!--ConfirmIdentityDialog-->
   <string name="ConfirmIdentityDialog_your_safety_number_with_s_has_changed">%1$s ile olan güvenlik numaranız değişti. Bu, birisinin iletişiminizi kesmeye çalıştığı ya da %2$s Signal\'i yeniden yüklemiş olduğu anlamına gelebilir.</string>
   <string name="ConfirmIdentityDialog_you_may_wish_to_verify_your_safety_number_with_this_contact">Bu kişiyle güvenlik numaranızı doğrulamak isteyebilirsiniz.</string>
@@ -137,7 +138,6 @@
   <string name="ConversationActivity_transport_insecure_mms">Şifresiz MMS</string>
   <string name="ConversationActivity_transport_signal">Signal</string>
   <string name="ConversationActivity_lets_switch_to_signal">Signal uygulamasından konuşalım %1$s</string>
-  <string name="ConversationActivity_lets_use_this_to_chat">Sohbet etmek için bunu kullanalım: %1$s</string>
   <string name="ConversationActivity_error_leaving_group">Gruptan ayrılırken hata</string>
   <string name="ConversationActivity_specify_recipient">Lütfen bir kişi seçin</string>
   <string name="ConversationActivity_unblock_this_contact_question">Bu kişinin engellemesini kaldır?</string>
@@ -162,6 +162,8 @@
   <string name="ConversationActivity_no">Hayır</string>
   <string name="ConversationActivity_search_position">%1$d / %2$d</string>
   <string name="ConversationActivity_no_results">Sonuç yok</string>
+  <string name="ConversationActivity_sticker_pack_installed">Çıkartma paketi yüklendi</string>
+  <string name="ConversationActivity_new_say_it_with_stickers">Yeni! Çıkartmalarınızı konuşturun</string>
   <!--ConversationAdapter-->
   <plurals name="ConversationAdapter_n_unread_messages">
     <item quantity="one">%d okunmamış ileti</item>
@@ -558,6 +560,7 @@
   <string name="SharedContactView_message">Signal İletisi</string>
   <!--Slide-->
   <string name="Slide_image">Görüntü</string>
+  <string name="Slide_sticker">Çıkartma</string>
   <string name="Slide_audio">Ses</string>
   <string name="Slide_video">Video</string>
   <!--SmsMessageRecord-->
@@ -569,6 +572,26 @@ Geçersiz protokol sürümünde anahtar değişim iletisi alındı.</string>
   <string name="SmsMessageRecord_secure_session_reset">Güvenli oturumu sıfırladınız.</string>
   <string name="SmsMessageRecord_secure_session_reset_s">%s güvenli oturumu sıfırladı.</string>
   <string name="SmsMessageRecord_duplicate_message">Tekrarlanan ileti.</string>
+  <string name="SmsMessageRecord_this_message_could_not_be_processed_because_it_was_sent_from_a_newer_version">
+        Bu mesaj Signal\'in yeni sürümünden gönderildiği için işlenemiyor. Güncelledikten sonra bu iletiyi tekrar göndermelerini isteyebilirsiniz.
+    </string>
+  <!--StickerManagementActivity-->
+  <string name="StickerManagementActivity_stickers">Çıkartmalar</string>
+  <!--StickerManagementAdapter-->
+  <string name="StickerManagementAdapter_installed_stickers">Yüklü Çıkartmalar</string>
+  <string name="StickerManagementAdapter_stickers_you_received">Aldığınız Çıkartmalar</string>
+  <string name="StickerManagementAdapter_signal_artist_series">Signal Tarafından</string>
+  <string name="StickerManagementAdapter_no_stickers_installed">Yüklü çıkartma yok</string>
+  <string name="StickerManagementAdapter_stickers_from_incoming_messages_will_appear_here">Gelen mesajlardan aldığınız çıkartmalar burada gözükecektir</string>
+  <string name="StickerManagementAdapter_untitled">İsimsiz</string>
+  <string name="StickerManagementAdapter_unknown">Bilinmeyen</string>
+  <!--StickerPackPreviewActivity-->
+  <string name="StickerPackPreviewActivity_untitled">İsimsiz</string>
+  <string name="StickerPackPreviewActivity_unknown">Bilinmeyen</string>
+  <string name="StickerPackPreviewActivity_install">Yükle</string>
+  <string name="StickerPackPreviewActivity_remove">Kaldır</string>
+  <string name="StickerPackPreviewActivity_stickers">Çıkartmalar</string>
+  <string name="StickerPackPreviewActivity_failed_to_load_sticker_pack">Çıkartma paketi yüklenemedi</string>
   <!--ThreadRecord-->
   <string name="ThreadRecord_group_updated">Grup güncellendi</string>
   <string name="ThreadRecord_left_the_group">Gruptan ayrıldı</string>
@@ -585,6 +608,7 @@ Geçersiz protokol sürümünde anahtar değişim iletisi alındı.</string>
   <string name="ThreadRecord_your_safety_number_with_s_has_changed">%s ile güvenlik numaranız değişti.</string>
   <string name="ThreadRecord_you_marked_verified">Doğrulanmış olarak işaretlediniz.</string>
   <string name="ThreadRecord_you_marked_unverified">Doğrulanmamış olarak işaretlediniz.</string>
+  <string name="ThreadRecord_message_could_not_be_processed">Mesaj işlenemedi</string>
   <!--UpdateApkReadyListener-->
   <string name="UpdateApkReadyListener_Signal_update">Signal güncellemesi</string>
   <string name="UpdateApkReadyListener_a_new_version_of_signal_is_available_tap_to_update">Signal\'in yeni sürümü mevcut, güncellemek için dokunun</string>
@@ -650,6 +674,7 @@ Geçersiz protokol sürümünde anahtar değişim iletisi alındı.</string>
   <string name="MessageNotifier_mark_all_as_read">Tümünü okundu işaretle</string>
   <string name="MessageNotifier_mark_read">Okundu işaretle</string>
   <string name="MessageNotifier_media_message">Medya iletisi</string>
+  <string name="MessageNotifier_sticker">Çıkartma</string>
   <string name="MessageNotifier_reply">Cevapla</string>
   <string name="MessageNotifier_signal_message">Signal İletisi</string>
   <string name="MessageNotifier_unsecured_sms">Şifresiz SMS</string>
@@ -772,6 +797,7 @@ Geçersiz protokol sürümünde anahtar değişim iletisi alındı.</string>
   <string name="QuoteView_audio">Ses</string>
   <string name="QuoteView_video">Video</string>
   <string name="QuoteView_photo">Fotoğraf</string>
+  <string name="QuoteView_sticker">Çıkartma</string>
   <string name="QuoteView_document">Doküman</string>
   <string name="QuoteView_you">Siz</string>
   <string name="QuoteView_original_missing">İletinin aslı bulunamadı</string>
